# eagle

./: .gitmodules  Cargo.toml  README.md
eagle/: Cargo.toml
eagle-app/: Cargo.toml
eagle-app/src/: config.rs  main.rs
eagle-app/src/config/: disks.rs  file.rs  google.rs  tags.rs
eagle-contrib/: Cargo.toml
eagle-contrib/src/: lib.rs
eagle-contrib/src/google/: mod.rs
eagle-contrib/src/google/sinks/: stack_driver.rs
eagle-contrib/src/google/sinks/stack_driver/: metrics.rs  types.rs
eagle-core/: Cargo.toml
eagle-core/src/: config.rs  lib.rs
eagle-file/: Cargo.toml
eagle-file/src/: lib.rs
eagle-google/: Cargo.toml  codegen.rs
eagle-google/src/: generated.rs  lib.rs  types.rs
eagle-google/src/sinks/: mod.rs  stack_driver.rs
eagle-google/src/sinks/stack_driver/: metrics.rs  types.rs
eagle/src/: engines.rs  lib.rs  main.rs  sources.rs
eagle/src/engines/vspec/: mod.rs  sink.rs  source.rs
eagle/src/runtime/: sink.rs  source.rs
eagle/src/sinks/: console.rs
eagle/src/sources/: file.rs  host.rs
eagle/src/sources/host/: disks.rs  load.rs  memory.rs  mod.rs
eagle/src/transformers/: tags.rs
