[package]
name = "eagle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.uuid]
version = "*"
features = ["v4"]

[dependencies.tokio]
version = "*"
features = ["sync"]

[dependencies]
async-trait = "*"
chrono = "0.4"
futures = "0.3"
eyre = "0.6"
