[package]
name = "eagle-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["fs", "rt", "sync", "time"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.eagle-core]
path = "../eagle-core"

[dependencies]
eyre = "0.6"
glob = "0.3"
async-trait = "*"
