[package]
name = "eagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "*"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["macros", "time", "rt-multi-thread", "sync"]

[dependencies.eagle-core]
path = "../eagle-core"

[dependencies]
async-trait = "*"
futures = "*"
heim = "0.1.0-rc.1"
heim-disk = "0.1.0-rc.1"
tracing = "0.1"
