[package]
name = "eagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "*"
features = ["v4"]

[dependencies.tokio]
version = "1.20"
features = ["macros", "time", "rt-multi-thread", "sync", "fs"]

[dependencies.heim]
version = "0.1.0-rc.1"
features = ["cpu", "memory"]

[dependencies.eagle-core]
path = "../eagle-core"

[dependencies]
async-trait = "*"
futures = "*"
heim-disk = "0.1.0-rc.1"
heim-memory = "0.1.0-rc.1"
heim-cpu = "0.1.0-rc.1"
tracing = "0.1"
eyre = "0.6"
serde_json = "1"
serde = "1"
